project/manifests/api/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: kflask-api-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kflask-api
  template:
    metadata:
      labels:
        app: kflask-api
    spec:
      containers:
        - name: kflask-api
          image: PROJECT/API
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
               path: /health
               port: 6000
          resources:
            limits:
              cpu: "250m"
              memory: "100Mi"
