project/manifests/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kflask-api-svc
  namespace: project
spec:
  type: NodePort
  selector:
    app: kflask-api # This is the app as declared in the deployment.
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6000 # This is the target port
