project/manifests/api/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  namespace: project
spec:
  rules:
  - http:
      paths:
      - path: /api/
        backend:
          serviceName: kflask-api-svc
          servicePort: 80
